recursion.cons.lessons.recursion.cons.Length.scala.error
length:2: error: not found: value NIL
	if (l == NIL)
                 ^